Wed Apr  4 18:29:15 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_sleep.rb (TestSleep#test_sleep_5sec): syntax error.

	* test/ruby/test_sleep.rb (TestSleep#test_sleep_5sec): call uname
	  only on linux because it's a workaround for linux only.

Wed Apr  4 11:32:09 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/add_suffix/bug.c: make all functions in util.c static
	  to get rid of multiple definitions.  reported at
	  https://trac.macports.org/ticket/33814

Tue Apr  3 18:34:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (setreuid, setregid): suppress warnings.
	  [ruby-core:43374][Bug #6169]

Sat Mar 31 12:11:21 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_x509cert.c: Fix doc typo.

Fri Mar 30 14:17:17 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_pkcs7.c: fix crash when parsing garbage data.
	* test/openssl/test_pkcs7.rb: assert correct behavior for it.
	  Thanks to Matt Venables for reporting the issue.
	  [ruby-core:43250][Bug #6134]

Fri Mar 30 14:17:17 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_x509cert.rb: exclude test that fails when issuing
	  a certificate with RSA signature and DSS1 digest for earlier
	  OpenSSL versions when used in conjunction with OpenSSL 1.0.1.
	  Thanks, Vit Ondruch, for reporting the issue.
	  [ruby-core:42949][Bug #6089]

Fri Mar 30 14:15:40 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_new_empty): should copy also the encoding as an
	  empty substring.  [ruby-dev:45441][Bug #6206]

Fri Mar 30 14:14:36 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (datetime_s_now): [ruby-core:43256].

Fri Mar 30 14:12:53 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c: fix flodivmod for cornercases [Bug #6044]
	  add ruby_float_mod

	* insns.def (opt_mod): use ruby_float_mod

	* internal.h: declare ruby_float_mod

	* test/ruby/test_float.rb: tests for above
