@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 176
+#define RUBY_PATCHLEVEL 177
 
 #define RUBY_RELEASE_DATE "2012-04-04"
 #define RUBY_RELEASE_YEAR 2012
