@@ -1,3 +1,14 @@
+Sat Apr  7 10:28:40 2012  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych.rb: bumping up psych version to match release.
+	* ext/psych/psych.gemspec: ditto
+
+Sat Apr  7 02:07:00 2012  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/parser.c: fall back to any encoding if the external
+	  encoding is wrong.  [ruby-core:44163]
+	* test/psych/test_encoding.rb: fix test
+
 Wed Apr  4 18:29:15 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/ruby/test_sleep.rb (TestSleep#test_sleep_5sec): syntax error.
